hphp/hack/test/typecheck/assignment_sequencing/list_duplicates_nested.php.like_types.exp
File "list_duplicates_nested.php", line 6, characters 3-23:
Invalid index type for this array (Typing[4324])
File "list_duplicates_nested.php", line 6, characters 15-16:
Expected int
File "list_duplicates_nested.php", line 4, characters 30-39:
This can only be indexed with integers
File "list_duplicates_nested.php", line 4, characters 15-24:
But got dynamic because it is an unenforceable type
File "list_duplicates_nested.php", line 6, characters 8-9:
Unsequenced modification and access to local variable. Modified here (Typing[4143])
File "list_duplicates_nested.php", line 6, characters 15-16:
And accessed here
